# lifted

./: .gitignore  .gitmodules  README.md  meson.build  meson.options  pyproject.toml
.github/workflows/: test_cpp.yml  test_win.yml
benchmarks/: meson.build  wavelet_highway.cpp
scratch/: 2D_transform.ipynb  adjoints.ipynb  dwt_test.cpp  fwd_adj.ipynb  fwd_adj_long.ipynb  highway_tests.cpp  interleave.py  test_python_package.ipynb  wavelet_autovec.cpp  wavelets.hpp  wavelets_info.cpp  wavelets_lift.cpp  wavelets_lift.optrpt  wvlt_dot.ipynb
src/: lifted-common.hpp  lifted-double.cpp  lifted-drivers-inl.hpp  lifted-export.hpp  lifted-float.cpp  lifted-inl.hpp  lifted-ops-inl.hpp  lifted-sep-double.cpp  lifted-sep-float.cpp  lifted-steps-inl.hpp  lifted-wavelets.hpp  lifted.hpp  meson.build  ndarray.hpp  wavelets.hpp
src/pylifted/: __init__.py  _wavelets.pyx  for.cpp  for_adj.cpp  for_sep.cpp  for_sep_adj.cpp  instantiations.hpp  inv.cpp  inv_adj.cpp  inv_sep.cpp  inv_sep_adj.cpp  meson.build
subprojects/: highway.wrap
subprojects/packagefiles/google-highway/: meson.build  meson_options.txt
tests/: meson.build  test_dwt.cpp  test_helpers.h  test_inverse.cpp  test_single_levels.cpp  wavelets_lift.cpp
