[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python>=0.15.0",
    "Cython>=3.0.8",
    "numpy>=2.0.0rc1",
]

[project]
name = 'pylifted'
version = '0.0.1_alpha'
description = 'Lifted Wavelet Transforms'
readme = 'README.md'
requires-python = '>=3.10'
authors = [
  {name = 'Joseph Capriotti', email = 'josephrcapriotti@gmail.com'},
]
keywords = [
    'wavelet', 'transform', 'lifted'
]

[tool.meson-python.args]
setup = ['-Dpython_install=true', '-Dbuild_tests=false', '--default-library=static']
install = ['--skip-subprojects']
